# opensesame-plugin-media_player_mpy

./: MANIFEST.in  README.md  pyproject.toml  readme.md  setup.py  upload_to_pypi
media_player_mpy/: info.yaml  media_player_mpy.md  media_player_mpy.py
media_player_mpy/handlers/: __init__.py  expyriment_handler.py  legacy_handler.py  opengl_renderer.py  psychopy_handler.py  pygame_handler.py
opensesame_plugins/media_player_mpy/: __init__.py
opensesame_plugins/media_player_mpy/media_player_mpy/: __init__.py  media_player_mpy.md  media_player_mpy.py
opensesame_plugins/media_player_mpy/media_player_mpy/handlers/: __init__.py  expyriment_handler.py  legacy_handler.py  opengl_renderer.py  psychopy_handler.py  pygame_handler.py
opensesame_plugins/media_player_mpy/media_player_mpy/locale/: ar.qm  ar.ts  bn.qm  bn.ts  de.qm  de.ts  es.qm  es.ts  fr.qm  fr.ts  he.qm  he.ts  hi.qm  hi.ts  id.qm  id.ts  it.qm  it.ts  ja.qm  ja.ts  ko.qm  ko.ts  nl.qm  nl.ts  pt.qm  pt.ts  ru.qm  ru.ts  tr.qm  tr.ts  translatables.ts  yue.qm  yue.ts  zh.qm  zh.ts
opensesame_plugins/media_player_mpy/media_player_mpy/locale/de/: media_player_mpy.md
opensesame_plugins/media_player_mpy/media_player_mpy/locale/es/: media_player_mpy.md
opensesame_plugins/media_player_mpy/media_player_mpy/locale/fr/: media_player_mpy.md
opensesame_plugins/media_player_mpy/media_player_mpy/locale/he/: media_player_mpy.md
opensesame_plugins/media_player_mpy/media_player_mpy/locale/hi/: media_player_mpy.md
translation_tools/: translations.json
(+10 files in other folders)
